<resources>
    <string name="app_name" translatable="false">Lunch at Work</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="facebook_app_id" translatable="false">383126392718290</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb383126392718290</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="denied_permission_string">Location permission is required to view your location, please enable it in settings</string>
    <string name="title_activity_restaurant_details" translatable="false">RestaurantDetailsActivity</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="register_button">Create Account</string>
    <string name="login_button">Login</string>
    <string name="edit_text_emailaddress">Email</string>
    <string name="im_hungry_toolbartitle" translatable="false">       I\'m Hungry</string>
    <string name="available_workmates_toolbartitle" translatable="false"> Available workmates</string>
    <string name="settings_toolbartitle" translatable="false">             Settings</string>
    <string name="like_restaurant">LIKE</string>
    <string name="liked_restaurant" translatable="false">LIKED</string>
    <string name="address">Address</string>
    <string name="location_disabled_message">Your location is disabled, do you want to enable it?</string>
    <string name="my_location" translatable="false">My Location</string>
    <string name="search_restaurants" translatable="false">Search restaurants</string>
    <string name="search_workmates" translatable="false">Search workmates</string>
    <string name="notifications_on">Notifications have been turned on!</string>
    <string name="notifications_off">Notifications have been turned off!</string>
    <string name="get_ready_for_lunch">Get ready for Lunch!</string>
    <string name="today_youre_eating_lunch_at" translatable="false">Today, you\'re eating lunch at</string>
    <string name="is_undecided_on_a_restaurant" translatable="false">is undecided on a restaurant</string>
    <string name="is_eating_at" translatable="false">is eating at</string>
    <string name="hasnt_decided_yet" translatable="false">hasn\'t decided yet</string>
    <string name="open_now" translatable="false">Open Now</string>
    <string name="closed" translatable="false">Closed</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="is_joining"> is joining!</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="website" translatable="false">WEBSITE</string>
    <string name="name">Name</string>
    <string name="call">CALL</string>
    <string name="open_until_7pm">Open until 7pm</string>
    <string name="notifications_on_off">Notifications On/Off</string>
    <string name="Yes" translatable="false">Yes</string>
    <string name="Si" translatable="false">Si</string>
    <string name="User_registration_successful" translatable="false">User Registration successful</string>
    <string name="User_registration_successful_spanish" translatable="false">Registro de usuario exitosa</string>
    <string name="español" translatable="false">español</string>
    <string name="User_Registration_failed" translatable="false">User Registration failed</string>
    <string name="Error_de_registro_de_usuario" translatable="false">Error de registro de usuario</string>
    <string name="User_Login_success" translatable="false">User Login success</string>
    <string name="User_Login_success_spanish" translatable="false">Inicio de sesión de usuario exitoso</string>
    <string name="User_Login_failed" translatable="false">User Login failed</string>
    <string name="User_Login_failed_spanish" translatable="false">Error de inicio de sesión de usuario</string>
    <string name="missing_fields_reminder" translatable="false">Please complete missing fields to create account</string>
    <string name="missing_fields_reminder_spanish" translatable="false">Complete los campos que faltan para crear una cuenta</string>
    <string name="restaurant_undecided_toast" translatable="false">You haven\'t decided on a restaurant yet!</string>
    <string name="restaurant_undecided_toast_spanish" translatable="false">Aún no te has decidido por un restaurante!</string>
    <string name="you_are_having_lunch_at" translatable="false">You\'re having lunch at</string>
    <string name="you_are_having_lunch_at_spanish" translatable="false">Estás almorzando en</string>
    <string name="failed_to_add" translatable="false">Failed to add</string>
    <string name="failed_to_add_spanish" translatable="false">No se pudo agregar</string>
    <string name="notifications_turned_on" translatable="false">Notifications have been turned on!</string>
    <string name="notifications_turned_on_spanish" translatable="false">Se han activado las notificaciones!</string>
    <string name="notifications_turned_off" translatable="false">Notifications have been turned off!</string>
    <string name="notifications_turned_off_spanish" translatable="false">Se han desactivado las notificaciones!</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="fb_sign_in">Sign in with Facebook</string>
</resources>