<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <RatingBar
        android:id="@+id/restaurantRatingFromList"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="15dp"
        android:foregroundGravity="center"
        android:isIndicator="true"
        android:numStars="3"
        android:progressBackgroundTint="@color/myBlack"
        android:progressTint="@color/myYellow"
        android:rating="5"
        android:scaleX="1"
        android:scaleY="1" />

    <TextView
        android:id="@+id/distanceFromUserToRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="204dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:text="120m" />

    <TextView
        android:id="@+id/openUntilTextview"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="9dp"
        android:text="@string/open_until_7pm"
        android:textColor="#2F353A"
        android:textSize="13sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/addressOfRestaurantInList"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="37dp"
        android:text="@string/restaurant_address"
        android:textColor="#2F353A"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/restaurantImage"
        android:layout_width="79dp"
        android:layout_height="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="6dp"
        app:srcCompat="@drawable/defaultrestaurantimage" />

    <TextView
        android:id="@+id/nameOfrestaurantTextview"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/defaultColleagueIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="109dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/default_colleague_icon" />

    <TextView
        android:id="@+id/numberOfColleaguesTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="92dp"
        android:text="(0)"
        android:visibility="invisible"
        android:textColor="#000000" />

</RelativeLayout>